add user, index router

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "node-js-real-time-chat",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,13 @@
     "eslint-plugin-vue": "^7.5.0"
   },
   "dependencies": {
+    "connect-ensure-login": "^0.1.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.11.16",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.0",
     "socketio": "^1.0.0"
   }
 }
