add debug command

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "runtimeArgs": [
                 "run",
-                "start"
+                "debug"
             ],
             "runtimeExecutable": "npm",
             "skipFiles": [
