--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "connect-ensure-login": "^0.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "install": "^0.13.0",
     "mongoose": "^5.11.16",
     "morgan-body": "^2.6.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0",
-    "socketio": "^1.0.0"
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.1"
   }
 }
