--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "connect-ensure-login": "^0.1.1",
+    "dayjs": "^1.10.4",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "install": "^0.13.0",
